@@ -113,3 +113,7 @@ def main():
 
 if __name__ == '__main__':
     main()
+
+
+def test_entry():
+    main()
