@@ -10,7 +10,10 @@ Y = Paralax Release
 Z = Internal versioning
 
 V KR 1.8.12 (11/20 week begin)
+=======================
 > Probability death triss calculated
+> Fixed driver and montecarlo sim outputting errors in superlow rollout numbers
+> Added Knexus jedi tester script
 
 V KR 1.7.11 (11/13 week begin)
 ========================
